# proof-of-public-value

./: .gitignore  404.html  Cargo.toml  LICENSE  PoPV-Citizen-debug.apk.sha256  PoPV-Citizen-debug.zip.sha256  README.md  index.html  mkdocs.yml  package-lock.json  package.json  provenance-store.json  sitemap.xml  vercel.json
.dev-logs/: reward-system.md
.github/workflows/: mkdocs.yml
.stellar/: config.toml
ai-oracle/: .env.example  README.md  index.html  service.js  service.ts  tsconfig.json
api/: auditor-decision.js  build-tx.js  build-tx.mjs  citizen-reports.js  claim-citizen.js  claim-citizen.mjs  claim-citizen.ts  claim-rpt.js  claim-rpt.mjs  claim-rpt.ts  confirm-escrow.js  package-lock.json  package.json  process-gate3.js  pvos.mjs  report-challenge.js  reputation.js  send-payment.mjs  setup-trustline.mjs  submit-report.js  upload-ipfs.mjs
appendices/: index.html
approving-milestones/: index.html
audit-trail/: index.html
citizen-field-reporting/: index.html
community-verification/: index.html
contracts/access_control/: Cargo.toml
contracts/access_control/src/: lib.rs  test.rs
contracts/ai_oracle/: Cargo.toml
contracts/ai_oracle/src/: lib.rs  test.rs
contracts/audit_trail/: Cargo.toml
contracts/audit_trail/src/: lib.rs  test.rs
contracts/community_oracle/: Cargo.toml
contracts/community_oracle/src/: lib.rs  test.rs
contracts/compliance_engine/: Cargo.toml
contracts/compliance_engine/src/: lib.rs  test.rs
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs  test.rs
contracts/grant_commitment/: Cargo.toml
contracts/grant_commitment/src/: lib.rs  test.rs
contracts/popv_router/: Cargo.toml
contracts/popv_router/src/: lib.rs  test.rs
contracts/procurement_market/: Cargo.toml
contracts/procurement_market/src/: lib.rs  test.rs
contracts/public_index/: Cargo.toml
contracts/public_index/src/: lib.rs  test.rs
contracts/pvo_core/: Cargo.toml
contracts/pvo_core/src/: lib.rs  test.rs
contracts/reputation/: Cargo.toml
contracts/reputation/src/: lib.rs  test.rs
contracts/token/: Cargo.toml
contracts/token/src/: lib.rs
contracts/value_score/: Cargo.toml
contracts/value_score/src/: lib.rs  test.rs
creating-projects/: index.html
docs/: ai-oracle.md  appendices.md  approving-milestones.md  audit-trail.md  citizen-field-reporting.md  community-verification.md  creating-projects.md  escrow-deep-dive.md  getting-started.md  index.md  local-frontend-runbook.md  philippines-corruption.md  pphp-token.md  reward-system.md  role-guide.md  submitting-evidence.md
escrow-deep-dive/: index.html
frontend/: .env.example  .gitignore  aggregate-deadlines.cjs  aggregate.cjs  e2e-test.ts  index.html  package-lock.json  package.json  server.ts  setup-trustlines.cjs  tsconfig.app.json  tsconfig.node.json  tsconfig.server.json  vite-api.ts  vite.config.ts
frontend/api/: ai-oracle.ts  claim-citizen.ts  claim-rpt.ts
frontend/public/: manifest.json  popv-presentation.pptx  presentation.html  sw.js
frontend/src/: App.tsx  config.ts  dataCache.ts  helpers.ts  index.css  ipfs.ts  main.tsx  tx.ts  wallet.tsx
frontend/src/components/: Autosuggest.tsx  BlockchainLoader.tsx  CreatePphpTrustline.tsx  IpfsLink.tsx  Modal.tsx  WalletAddress.tsx
frontend/src/pages/: AIDashboard.tsx  AdminPanel.tsx  AgencyDashboard.tsx  AntiCorruptionDashboard.tsx  AuditorDashboard.tsx  (+21 more)
getting-started/: index.html
local-frontend-runbook/: index.html
philippines-corruption/: index.html
pphp-token/: index.html
provenance-indexer/: archiver.ts  service.ts
reward-system/: index.html
role-guide/: index.html
scripts/: deploy.sh  e2e-auditor-test.mjs  process-gate3.mjs
search/: search_index.json
services/event-indexer/: index.js  package-lock.json  package.json
submitting-evidence/: index.html
(+45 files in other folders)
