[workspace]
resolver = "2"
members = [
  "contracts/*",
]

[workspace.dependencies]
soroban-sdk = "26"
access_control = { path = "contracts/access_control" }
pvo_core = { path = "contracts/pvo_core" }
escrow = { path = "contracts/escrow" }
community_oracle = { path = "contracts/community_oracle" }
reputation = { path = "contracts/reputation" }
audit_trail = { path = "contracts/audit_trail" }
value_score = { path = "contracts/value_score" }
ai_oracle = { path = "contracts/ai_oracle" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
