[package]
name = "popv_router"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib"]
doctest = false

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
access_control = { workspace = true }
pvo_core = { workspace = true }
escrow = { workspace = true }
community_oracle = { workspace = true }
reputation = { workspace = true }
audit_trail = { workspace = true }
value_score = { workspace = true }
ai_oracle = { workspace = true }
public_index = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
access_control = { workspace = true, features = ["testutils"] }
pvo_core = { workspace = true, features = ["testutils"] }
escrow = { workspace = true, features = ["testutils"] }
community_oracle = { workspace = true, features = ["testutils"] }
reputation = { workspace = true, features = ["testutils"] }
audit_trail = { workspace = true, features = ["testutils"] }
value_score = { workspace = true, features = ["testutils"] }
ai_oracle = { workspace = true, features = ["testutils"] }
public_index = { workspace = true, features = ["testutils"] }
